--- a/oop-lab3/oop-lab3.vcxproj
+++ b/oop-lab3/oop-lab3.vcxproj
@@ -132,8 +132,10 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mixture.cpp" />
     <ClCompile Include="Primary.cpp" />
+    <ClCompile Include="Tests.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="catch.hpp" />
     <ClInclude Include="Empirical.h" />
     <ClInclude Include="Interface.h" />
     <ClInclude Include="Lib.h" />
